[package]
name = "dash-spv-masternode-processor"
version = "0.3.4"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
byte = "0.2"
libc = "0.2.132"

#[dependencies.dash-spv-primitives]
#path = "../dash-spv-primitives"
#[dependencies.dash-spv-models]
#path = "../dash-spv-models"
#[dependencies.dash-spv-ffi]
#path = "../dash-spv-ffi"

#[dependencies.dash-spv-storage]
#path = "../dash-spv-storage"

[dependencies.dash-spv-primitives]
git = "https://github.com/pankcuf/dash-spv-primitives"
branch = "master"
version = "0.2.2"
[dependencies.dash-spv-models]
git = "https://github.com/pankcuf/dash-spv-models"
branch = "master"
version = "0.2.4"
[dependencies.dash-spv-ffi]
git = "https://github.com/pankcuf/dash-spv-ffi"
branch = "master"
version = "0.2.4"

[dev-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bls-signatures = { git = "https://github.com/dashevo/bls-signatures", branch = "rust-bindings" }
[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_masternode_processor"
#crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3
#debug = true
