[package]
name = "dash-spv-masternode-processor"
version = "0.3.7"
edition = "2021"
build = "build.rs"
publish = false

[features]
default = ["std", "secp-recovery"]
unstable = []
rand = ["secp256k1/rand-std"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["secp256k1/std", "bitcoin_hashes/std"]
#std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std"]
#no-std = ["hashbrown", "core2/alloc", "bitcoin_hashes/alloc"]

[dependencies]
byte = "0.2"
libc = "0.2.132"
bitcoin_hashes = { version = "0.11.0", default-features = false }
bitcoinconsensus = { version = "0.19.0-3", optional = true }
secp256k1 = { version = "0.24.0", default-features = false }
core2 = { version = "0.4.0", optional = true, default-features = false }

#[dependencies.dash-spv-storage]
#path = "../dash-spv-storage"

[dev-dependencies]
secp256k1 = { version = "0.24.0", features = [ "recovery", "rand-std" ] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11", features = ["blocking", "json"] }
bls-signatures = { git = "https://github.com/dashevo/bls-signatures", branch = "rust-bindings" }

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_masternode_processor"
#crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = "thin"
opt-level = 3
#debug = true
