[package]
name = "dash-spv-masternode-processor"
version = "0.3.10"
edition = "2021"
build = "build.rs"
publish = false

[features]
default = ["std", "secp-recovery"]
unstable = []
rand = ["secp256k1/rand-std"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.cargo up
std = ["secp256k1/std", "bitcoin_hashes/std"]
#std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std"]
#no-std = ["hashbrown", "core2/alloc", "bitcoin_hashes/alloc"]

[dependencies]
bip0039 = { version = "0.11.0", default-features = false, features = ["chinese-simplified", "french", "italian", "japanese", "korean", "spanish"] }
bip39 = { version = "1.0.1", default-features = false, features = ["chinese-simplified", "french", "italian", "japanese", "korean", "spanish", "rand"] }
bitflags = "2.0.0-rc.1"
blake3 = "1.3.2"
byte = "0.2"
bitcoin_hashes = { version = "0.11.0", default-features = false }
bitcoinconsensus = { version = "0.19.0-3", optional = true }
bls-signatures = { git = "https://github.com/dashevo/bls-signatures", branch = "rust-bindings-enhancement" }
common-crypto = "0.3.0"
core2 = { version = "0.4.0", optional = true, default-features = false }
ed25519-dalek = "2.0.0-pre.0"
futures = "0.3.25"
libc = "0.2.132"
murmur3 = "0.5.2"
os-timer = "1.0.10"
rs-x11-hash = "0.1.2"
secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std", "bitcoin_hashes" ] }
security-framework = "2.8.2"

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = "1.25.0"
unicode-normalization = "0.1.22"

[dev-dependencies]
secp256k1 = { version = "0.26.0", features = [ "recovery", "rand-std" ] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21.0"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_masternode_processor"
#crate-type = ["staticlib", "cdylib"]
#proc-macro = true

#[profile.release]
#lto = "thin"
#opt-level = 3
##debug = true
