[package]
name = "dash-spv-ffi"
version = "0.2.3"
edition = "2021"
build = "build.rs"
publish = false

[dependencies]
byte = "0.2"
libc = "0.2.132"

[dependencies.dash-spv-primitives]
path = "../spv-primitives"
[dependencies.dash-spv-models]
path = "../spv-models"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "dash_spv_ffi"

[profile.release]
lto = "thin"
opt-level = 3
debug = true
