[package]
name = "dash-spv-primitives"
version = "0.2.2"
edition = "2021"
publish = false

# Please don't forget to add relevant features to docs.rs below
[features]
default = ["std", "secp-recovery"]
unstable = []
rand = ["secp256k1/rand-std"]
secp-lowmemory = ["secp256k1/lowmemory"]
secp-recovery = ["secp256k1/recovery"]

# At least one of std, no-std must be enabled.
#
# The no-std feature doesn't disable std - you need to turn off the std feature for that by disabling default.
# Instead no-std enables additional features required for this crate to be usable without std.
# As a result, both can be enabled without conflict.
std = ["secp256k1/std", "bitcoin_hashes/std"]
#std = ["secp256k1/std", "bitcoin_hashes/std", "bech32/std"]
#no-std = ["hashbrown", "core2/alloc", "bitcoin_hashes/alloc"]

[dependencies]
byte = "0.2"
bitcoin_hashes = { version = "0.10.0", default-features = false }
bitcoinconsensus = { version = "0.19.0-3", optional = true }
secp256k1 = { version = "0.22.1", default-features = false }
core2 = { version = "0.3.0", optional = true, default-features = false }

[dev-dependencies]
secp256k1 = { version = "0.22.1", features = [ "recovery", "rand-std" ] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dash_spv_primitives"

[profile.release]
lto = "thin"
opt-level = 3
